--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
        <ul>
          <li class="item selection">Select Beach
            <ul class="child child-list">
-             <li class="b-list">Arcadian Shores</li>
-             <li class="b-list">Daufuskie Island</li>
-             <li class="b-list">Myrtle Beach</li>
-             <li class="b-list">Frip Island</li>
-             <li class="b-list">Hunting Island</li>
+             <li class="b-list">Ridge-Canyon Access Trail</li>
+             <li class="b-list">Rustic Canyon Trail</li>
+             <li class="b-list">Santa Maria Canyon Trail</li>
+             <li class="b-list">Trancas Canyon SCE Road Trail</li>
+             <li class="b-list">Tuna Canyon Main Entrance Trail</li>
            </ul>
 
 
